# traquer

./: Cargo.toml  README.md  aapl.input
.github/workflows/: gate.yml
benches/: aapl.input  my_benchmark.rs  traquer.rs
examples/: file_json.rs  yahoo.rs
src/: correlation.rs  indicator.rs  lib.rs  main.rs  momentum.rs  performance.rs  smooth.rs  trend.rs  volatility.rs  volume.rs
src/statistic/: distribution.rs  mod.rs  regression.rs
tests/: common.rs  correlation_test.rs  indicator_test.rs  ma_test.rs  momentum_test.rs  rddt.input  sp500.input  stat_dist_test.rs  stat_regression_test.rs  trend_test.rs  volatility_test.rs  volume_test.rs
